# mycolors

./: pyproject.toml
mycolors/: __init__.py
