[tool.poetry]
name = "mycolors"
version = "0.2.0"
description = ""
authors = ["tct123 <42028373+tct123@users.noreply.github.com>"]
readme = "README.md"
repository = "https://github.com/Creative-Media-Group/mycolors"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
